--- a/views/page3.handlebars
+++ b/views/page3.handlebars
@@ -14,5 +14,24 @@
   <a href="/">Home</a>
   <a href="/page1">Page 1</a>
   <a href="/page2">Page 2</a>
+  
+  <form action="/addDog" method="POST">
+    <label for="dogname">Name:</label>
+    <input type="text" name="dogname" value="">
+    <label for="breed">Breed:</label>
+    <input type="text" name="breed" value="">
+    <label for="age">Age:</label>
+    <input type="number" name="age" value="">
+    <input type="submit" value="submit"/>
+  </form>
+  
+  <br/>
+  <br/>
+  
+  <form action="updateDog" method="POST">
+    <label for="name">Name:</label>
+    <input type="text" name="name" value="">
+    <input type="submit" value="Update Dog">
+  </form>
 </body>
 </html>
